# WizardCLI

./: LICENSE  PyCLI.py  README  README.md  WizzardCLI.py  main.py  pycli.py  pycli_3.10_and_more.py  pycli_3.8_and_less.py  pycli_3.9.py  pycli_310.py  pycli_38.py  pycli_39.py  pycli_3_10_more.py  pycli_3_9_less.py  pyproject.toml  requirements.txt  setup.py  test.py  workflow.yml
WizardCLI/: __init__.py  core.py  styles.py  tools.py
