[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WizardCLI"
version = "1.3.4"
description = "A simple and efficient command-line tool written in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Overdjoker048", email = "overdrawdescartes@gmail.com" }
]
homepage = "https://github.com/Overdjoker048/WizardCLI"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]

[project.dependencies]
colorama = "*"
Pympler = "*"
pywin32 = "*"
# Ensure dependencies match the imports in core.py
